<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".editActivities.EditClassesActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/edit_class"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtModuleErrorClasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/module"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            >

            <AutoCompleteTextView
                android:id="@+id/txtModuleClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSemesterErrorClassesEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/semester"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            >

            <AutoCompleteTextView
                android:id="@+id/txtSemesterClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDayErrorEdit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/day"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            >

            <AutoCompleteTextView
                android:id="@+id/txtDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtStartTimeError"
            app:startIconDrawable="@drawable/baseline_access_time_24"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/start"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            >

            <AutoCompleteTextView
                android:id="@+id/txtStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEndTimeError"
            app:startIconDrawable="@drawable/baseline_access_time_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/end"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            >

            <AutoCompleteTextView
                android:id="@+id/txtEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRoom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/select_class_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            >

            <AutoCompleteTextView
                android:id="@+id/txtClassType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:background="@color/lightBlue"
            android:text="@string/edit_class"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>