<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/courseworkSearchLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"

    app:cardCornerRadius="16dp"

    app:cardElevation="12dp"


    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_coursework_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="My title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"

            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_coursework_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coursework_title"
            android:padding="5dp"
            android:text="@string/placeholder_description"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tv_coursework_deadline"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coursework_desc"
            android:padding="5dp"
            android:text="@string/placeholder_date"
            android:textColor="@color/black"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_coursework_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coursework_deadline"
            android:padding="5dp"
            android:text="@string/placeholder_priority"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_coursework_module"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coursework_priority"
            android:padding="5dp"
            android:text="@string/placeholder_module"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_coursework_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coursework_module"
            android:padding="5dp"
            android:text="@string/placeholder_completion_status"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tv_coursework_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coursework_module"
            android:padding="5dp"
            android:text="ID 2"
            android:textColor="@color/black"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/tv_time_left"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coursework_desc"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="3dp"

            android:layout_marginEnd="4dp"
            android:maxLines="2"
            android:text="@string/placeholder_duration" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>