<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".editActivities.EditCourseworkActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:context=".editActivities.EditCourseworkActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/edit_coursework"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtModuleErrorEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/module">

            >

            <AutoCompleteTextView
                android:id="@+id/txtModuleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTitleEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDescriptionEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="6"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"

                >

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPriorityErrorEdit"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/priority">

            >

            <AutoCompleteTextView
                android:id="@+id/txtPriorityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDeadlineError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/deadline">


            <AutoCompleteTextView
                android:id="@+id/txtDeadlineEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDeadlineTimeErrorEdit"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/deadline_time">

            >

            <AutoCompleteTextView
                android:id="@+id/txtDeadlineTimeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            app:checkedState="unchecked"
            android:id="@+id/checkbox_edit_coursework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"

            android:layout_weight="1"
            android:buttonTint="@color/dark_blue"
            android:checked="true"
            android:text="@string/completed"
            android:textSize="16sp"
            android:textStyle="bold">

        </com.google.android.material.checkbox.MaterialCheckBox>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit_coursework"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:background="@color/lightBlue"
            android:text="@string/edit_coursework"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>